Fixed overflow issue on forum category view and changed comments text to an image

--- a/public/CSS/forum.css
+++ b/public/CSS/forum.css
@@ -82,6 +82,9 @@
     color: #FFFFFF;
     font-size: 26px;
     margin: 0;
+    position: relative;
+    top: -42px;
+    left: 2px;
 }
 
 
@@ -158,6 +161,7 @@
     display: flex;
 
     flex-direction: row;
+    word-break: break-word;
 }
 .forumListe .tråd .hoveddel .trådlenke {
     margin-left: 20px;
